# cyplebrity

./: CHANGELOG.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
cyplebrity/data/: nerdd.yml
tests/features/: valid_predictions.feature
