[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyplebrity"
version = "0.0.13"
description = ""
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = " Wojtek Plonka" },
    { name = "Axinya Tokareva" },
    { name = "Steffen Hirte", email = "steffen.hirte@univie.ac.at" },
]
maintainers = [
    { name = "Johannes Kirchmair", email = "johannes.kirchmair@univie.ac.at" },
]
dependencies = [
    "molvs==0.1.1",
    "scikit_learn==0.23.2",
    "numpy==1.19.2",
    "nerdd-module>=0.3.39",
    "fpsim2 @ git+https://github.com/chembl/FPSim2.git@0.2.8",
    "importlib-resources>=5; python_version<'3.9'",
    "importlib-metadata>=4.6; python_version<'3.10'",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]
test = [
    "pytest",
    "pytest-watcher",
    "pytest-cov",
    "pytest-bdd==7.3.0",
    "hypothesis",
    "hypothesis-rdkit",
]

[project.urls]
Repository = "https://github.com/molinfo-vienna/cyplebrity"

[project.scripts]
cyplebrity = "cyplebrity.__main__:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "-x --cov-report=xml --cov-report=term --cov=cyplebrity"

[tool.pytest-watcher]
ext = ["py", "feature"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
